<resources>
    <string name="app_name">Ensiklopedi Anak Sholeh</string>
    <string name="Jslide1">Belajar Menjadi Lebih Mudah Dan Menyenangkan</string>
    <string name="Jslide2">Bebas Akses Kapan Saja</string>
    <string name="Jslide3">Belajar secara digital</string>
    <string name="slide1">Menyediakan bahan ajar materi dasar agama Islam yang lengkap dan mudah dipahami. Materi dasar seperti sholat, zakat, puasa, dan lain-lain yang terdiri dari teks dan gambar untuk memperjelas materi.</string>
    <string name="slide2">Dibuat agar dapat diakses kapan saja dan dimana saja sehingga tidak perlu membawa buku jika ingin membukanya walau dalam kondisi yang kurang memungkinkan</string>
    <string name="slide3">Aplikasi ini dibuat agar anak-anak dapat memanfaatkan teknologi sebagai salah satu media pembelajaran yang efektif serta mempermudah dalam mendalami suatu hala terutama dalam ilmu agama</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="iman1">Iman artinya percaya dengan yakin tanpa ada keraguan. Orang yang beriman disebut mukmin. Sedangkan menurut syariat iman adalah :</string>
    <string name="iman2">تَصْدِيقٌ بِالْقَلْبِ وَاقْرَارٌ بِالْسَانِ وَعَمَلَ بِالْأَرْكَان</string>
    <string name="iman3">Yaitu : membenarkan dengan hati, mengucapkan dengan lisan dan mengerjakan dengan perbuatan.</string>
    <string name="iman4">Jadi, kita sebagai anak ytang sholeh dan sholehah, harus beriman kepada rukun iman dan mengetahui maksud dari setiap rukun tersebut agar menjadi muslim yang baik.</string>
    <string name="iman5">Dalam suatu hadis shahih dijelaskan, yaitu ketika Nabi Saw. ditanya malaikat jibril tentang apak iman itu? Nabi menjawab,</string>
    <string name="iman6">قَالَ : أَنْ تُؤْمِنَ بِاللَّهِ وَمَلَائِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ وَالْيَوْمِ الْآخِرِ وَتُؤْمِنَ بِالْقَدَرِ خَيْرِهِ وَشَرِّهِ. قَالَ صَدَقْتَ</string>
    <string name="iman7">Artinya: "Iman adalah, engkau beriman kepada Allah; malaikat-malaikatnya; dan beriman kepada takdir Allah yang baik dan yang buruk," malaikat jibril berkata,"Engkau benar."[HR Muslim]</string>
    <string name="iman8">يَايُّهَا الَّذِينَ آمَنُوا أَمِنُوا بِاللَّهِ وَرَسُولِهِ وَالْكِتَبِ الَّذِي نَزَّلَ عَلَى رَسُولِهِ وَالْكِتَبِ الَّذِي أَنْزَلَ مِن قَبْلُ وَمَنْ يَكْفُرْ بِاللَّهِ وَمَلَيكَتِهِ وَكُتُبِهِ وَرُسُلِهِ وَالْيَوْمِ الْآخِرِ فَقَدْ ضَلَّ ضَالًا بَعِيدً</string>
    <string name="iman9">Artinya : Wahai orang-orang yang beriman, tetaplah beriman kepada Allah dan Rasul-nya dan kepada kitab yang Allah turunkan kepada Rasul-nya serta kitab tang Allah turunkan sebelumnya. Barangsiapa yang kafir kepada Allah, Malaikat-malaikat-nya, kitab-kitab-nya, rasul-rasul-nya, dan hari kemudian, maka sesungguhnya orang itu telah sesat sejauh-jauhnya. (Q.S.An-Nisa  ayat 136).</string>
    <string name="islam1">Islam adalah agama tauhid(universal) yang diturunkan Allah SWT kepada nabi muhammad SAW untuk disampaikan kepada umat manusia sebagai tuntunan(pedoman) agar selamat didunia dan akhirat. Orang yang memeluk agama Islam disebut muslim atau muslimah.</string>
    <string name="islam2">Agama Islam dibangun atas lima dasar yang kita sebut dengan rukun islam. Nabi bersabda :</string>
    <string name="islam3">عَنْ أَبِي عَبْدِ الرَّحْمَنِ عَبْدِ اللَّهِ بْنِ عُمَرَ بْنِ الْخَطَّابِ رَضِيَ اللَّهُ عَنْهُمَا قَالَ : سَمِعْتُ رَسُوْلَ اللهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ يَقُولُ : بُني الْإِسْلَامُ عَلَى خَمْسٍ : شَهَادَةِ أَنْ لَا إِلَهَ إِلَّا اللَّهُ وَ أَنَّ مُحَمَّدًا رَسُولُ اللهِ وَإِقَامِ الصَّلَاةِ وَ ِإيتَاءِ الزَّكَاةِ وَ حَجِّ الْبَيْتِ وَ صَوْمِ رَمَضَانَ</string>
    <string name="islam4">Dari Abu Abdirrahman Abdillah bin Umar bin Khaththab radhiyallahu anhuma, dia berkata "Aku pernah mendengar Rasulullah shallalahu alaihi wassalam bersabda : Islam itu dibangun di atas lima perkara, yaitu : bersaksi tiada sesembahan yang haq kecuali Allah dan sesungguhnya Muhammad adalah utusan Allah, menegakkan shalat, mengeluarkan zakat, mengerjakan haji ke Baitullah, dan berpuasa pada bulan ramadhan." (HR. Bukhari dan Muslim)</string>
    <string name="islam5">Dari hadis di atas berarti jumlah rukun islam ada lima yaitu :\n1. Membaca kedua kalimat syahadat\n2. Melaksanakan Shalat\n3. Membayar zakar\n4. Puasa dibulan Ramadhan\n5. Melaksanakan haji bagi yang mampu</string>
    <string name="khdp1">Ada empat yang dilalui manusia dalam kehidupannya, yaitu : Alam Rahim, Alam Dunia, Alam Kubur, Dan Alam Akhirat. Nah, kita sekarang berada di alam dunia. Selanjutnya apabila kita telah mati, ruh kita akan berpindah ke alam kubur</string>
    <string name="khdp2">Alam kubur adalah alam dimana tempat para roh manusia yang telah mati di dunia. Alam kubur disebut juga dengan alam barzakh. Di dalam kubur orang yang beriman dan baik akan mendapatkan nikmat kubur. Dan sebaliknya orang yang buruk dan jahat akan mendapatkan siksa kubur.</string>
    <string name="khdp3">Ketika orang yang akan meninggal dunia dalam keadaan beriman, malaikat maut yaitu Izrail menampakkan wajahnya yang tampan dan berseri-seri. Kemudian roh orang yang beriman tadi dicabut dengan halus dan mudah. Selanjutnya roh tersebut dibawa kelangit. Di sepanjang perjalanan, ia disambut oleh malaikat-malaikat yang mengaguminya.</string>
    <string name="akhlak11">Akhlak adalah sifat yang melekat pada diri kita dan akan muncul tanpa pertimbangan dan pemikiran. Sebagai anak y ang sholeh, kita harus mempunyai akhlak yang baik. Karena jika kita mempunyai akhlak yang baik, orang akan mencintai dan menyayangi kita. Nabi kita Muhammad SAW. bersabda : </string>
    <string name="akhlak12">إِنَّمَا بُعِثْتُ لأُتَمِّمَ مَكَارِمَ الأَخْلاقِ</string>
    <string name="akhlak13">Artinya : "Sesungguhnya aku diutus untuk menyempurnakan akhlak yang baik"(HR. Bukhori)</string>
    <string name="akhlak14">إِنَّ خِيَارَكُمْ أَحَاسِنُكُمْ أَخْلَاقًا</string>
    <string name="akhlak15">Artinya: "Sesungguhnya sebaik-baik kalian adalah yang paling bagus akhlaknya".(HR Bukhori dan Muslim)</string>
    <string name="akhlak16">Akhlak itu terbagi menjadi dua. Jika bagus dan tidak bertentangan dengan nilai agama dan budaya dinamakan akhlak terpuji. Jika tidak sesuai dengan perintah agama dan tidak cocok dengan budaya setempat maka itu dinamakan akhlak tercela.</string>
    <string name="fiqih_wudhu1">Anak Sholeh dan sholehah yang budiman...! ketika kamu ingin mengerjakan shalat baik itu shalat sunnah atau shalat wajib, maka wajib bagi kamu untuk mengambil Air wudhu terlebih dahulu dengan baik dan benar, Allah SWT. berfirman :</string>
    <string name="fiqih_wudhu2">يٰٓاَيُّهَا الَّذِيْنَ اٰمَنُوْٓا اِذَا قُمْتُمْ اِلَى الصَّلٰوةِ فَاغْسِلُوْا وُجُوْهَكُمْ وَاَيْدِيَكُمْ اِلَى الْمَرَافِقِ وَامْسَحُوْا بِرُءُوْسِكُمْ وَاَرْجُلَكُمْ اِلَى الْكَعْبَيْنِۗ وَاِنْ كُنْتُمْ جُنُبًا فَاطَّهَّرُوْاۗ وَاِنْ كُنْتُمْ مَّرْضٰٓى اَوْ عَلٰى سَفَرٍ اَوْ جَاۤءَ اَحَدٌ مِّنْكُمْ مِّنَ الْغَاۤىِٕطِ اَوْ لٰمَسْتُمُ النِّسَاۤءَ فَلَمْ تَجِدُوْا مَاۤءً فَتَيَمَّمُوْا صَعِيْدًا طَيِّبًا فَامْسَحُوْا بِوُجُوْهِكُمْ وَاَيْدِيْكُمْ مِّنْهُ ۗمَا يُرِيْدُ اللّٰهُ لِيَجْعَلَ عَلَيْكُمْ مِّنْ حَرَجٍ وَّلٰكِنْ يُّرِيْدُ لِيُطَهِّرَكُمْ وَلِيُتِمَّ نِعْمَتَهٗ عَلَيْكُمْ لَعَلَّكُمْ تَشْكُرُوْنَ</string>
    <string name="fiqih_wudhu3">Artinya : Wahai orang-orang yang beriman! Apabila kamu hendak melaksanakan salat, maka basuhlah wajahmu dan tanganmu sampai ke siku, dan sapulah kepalamu dan (basuh) kedua kakimu sampai ke kedua mata kaki. Jika kamu junub, maka mandilah. Dan jika kamu sakit atau dalam perjalanan atau kembali dari tempat buang air (kakus) atau menyentuh perempuan, maka jika kamu tidak memperoleh air, maka bertayamumlah dengan debu yang baik (suci); usaplah wajahmu dan tanganmu dengan (debu) itu. Allah tidak ingin menyulitkan kamu, tetapi Dia hendak membersihkan kamu dan menyempurnakan nikmat-Nya bagimu, agar kamu bersyukur.</string>
    <string name="fiqih_wudhu4">Dalam sebuah hadits dijelaskan bahwa shalat kita tidak akan diterima Allah SWT jika belum berwudhu. Nabi kita Muhammad SAW. bersabda :</string>
    <string name="fiqih_wudhu5">لَا يَقْبَلُ اللهُ صَلَاةَ أَحَدِكُمْ إِذَا أَحْدَثَ حَتَّى يَتَوَضَّأ</string>
    <string name="fiqih_wudhu6">Artinya: Allah tidak akan menerima shalat salah satu diantara kamu apabila berhadast sampai berwudhu</string>
    <string name="fiqih_wudhu7">Wudhu adalah menggunakan air yang suci (thahir) dan mensucikan (muthahir) dengan cara membasuhkannya dan mengusapkannya air tersebut sampai membasahi dan mengaliri di empat anggota badan yang khusus yaitu, wajah, kedua tangan, kepala, dan kedua kaki. Adapun sebab yang mewajibkan wudhu adalah hadats.</string>
    <string name="fiqih_wudhu8">1. Mencuci tangan sebelum memulai wudhu, disunnahkan. Disunnahkan pula membaca basmalah.
2. Berkumur tiga kali jugua disunnahkan. Menghisap air dari hidung kemudian dihembuskan hingga tiga kali juga disunnahkan.
3.Berniat dalam hati dengan dibarengi ucapan lisan, bisa dengan menggunakan bahasa arab;</string>
    <string name="fiqih_wudhu9">  ‎‫الْاَ صْغَرِ فَرْضًا لِلَّهِ تَعَالَى‬‎نَوَيْتُ الْوُضُوْءَ لِرَفْعِ الْحَدَثِ</string>
    <string name="fiqih_wudhu10">Artinya : Saya berniat wudhu untuk menghilangkan hadats kecil fardhu karena allah ta ala.</string>
    <string name="fiqih_wudhu11">4. Membasuh muka secara merata dengan kedua tangan mu mulai batas tumbuhnya rambut, sampai bawah dagu, disunnahkan mengulanginya sampai tiga kali.
5. Membasuh kedua tangan sampai ke siku secara bergantian dan merata, disunahkan mengulangnya sampai tiga kali.
6. Membasuh bagian kepala atau keseluruhannya hingga daun telinga disertai gerakan jari telunjuk untuk membersihkan disunnahkan sebanyak tiga kali. Adapun telinga ada sebagian ulama yang menganggapnya sunnah.
7. Membasuh kedua kaki dengan merata, disunnahkan sampai tiga kali. Diharuskan wahai adik-adikku dalam menjalankan wudhu ini harus dengan tertib atau urut sampai tiga kali.</string>
    <string name="fiqih_wudhu12">Setelah selesai wudhu, keluar dari tempat wudhu lalu menghadap kiblat, dan membaca doa seyelah wudhu,</string>
    <string name="fiqih_wudhu13">أَشْهَدُ أَنْ لاَ إِلَهَ إِلاَّ اللَّهُ وَحْدَهُ لاَ شَرِيكَ لَهُ وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَرَسُولُهُ. اللَّهُمَّ اجْعَلْنِى مِنَ التَّوَّابِينَ وَاجْعَلْنِى مِنَ الْمُتَطَهِّرِينَ</string>
    <string name="fiqih_wudhu14">Artinya : Aku bersaksi tiada Tuhan melainkan Allah dan tidak ada yang menyekutukan bagi-Nya. Dan aku bersaksi bahwa Nabi Muhammad adalah hamba-Nya dan utusan-Nya. Ya Allah jadikanlah aku orang yang ahli tobat, dan jadikanlah aku orang yang suci dan jadikanlah aku dari golongan orang-orang yang saleh.</string>
    <string name="fiqih_wudhu15">Anak-anak yang sholeh dan sholehah yang budiman! Perlu kamu ketahui bahwa ada beberapa hal yang membatalkan wudhu, yaitu :
    1. Keluarnya sesuatu dari salah satu dari dua lubang, lubang dubur dan qabul (alat kelamin)
    2. Hilang kesadaran, mabuk, pingsan, tidur nyenyak, adapun bila tidur dengan duduk asal tidak berubah posisi
    3. Menyentuh kulit awan jenis yang bukan muhrim (tidak ada hubungan keluarga)
    4. Menyentuh alat kelamin, Nabi bersabda :</string>
    <string name="fiqih_wudhu16">َالَ النَّبِيُّ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ:‬‎
‎‫مَنْ مَسَّ فَرْجَهُ فَلْيَتَوَضَا. رواه ابن ماجه‬‎</string>
    <string name="fiqih_wudhu17">Artinya : bersabda Nabi SAW barangsiapa yang menyentuh kemaluannya, maka berwudhulah (HR. Ibnu Majah).</string>
    <string name="fiqih_wudhu18">Anak-anak sholeh dan sholehah yang budiman! ada beberapa hal yang tidak boleh kalian lakukan ketika kalian batal wudhunya.
    1. Menyentuh Al-Quran
    2. Shalat
    3. Thowaf</string>
</resources>