<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wudhu"
    android:background="#00425A"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/frameHeader"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="330dp"
                android:layout_height="200dp"
                android:layout_gravity="end"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wudhu"
                app:riv_corner_radius_bottom_left="40dp"
                app:riv_corner_radius_bottom_right="40dp"
                app:riv_corner_radius_top_left="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="#00425A"
                android:backgroundTint="#BFDB38"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/baloo"
                    android:text="Wudhu"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:text="Apa Itu Wudhu ?"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frameHeader"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu1"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/fiqih_wudhu2"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fiqih_wudhu3"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu4"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/fiqih_wudhu5"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fiqih_wudhu6"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <!--apakah wudhu itu?-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/baloo"
                        android:text="Apakah wudhu itu?"
                        android:textColor="#b0d92b"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu7"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

                <!--Tata cara wudhu-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- Tata cara Wudhu"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu8"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/fiqih_wudhu9"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fiqih_wudhu10"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu11"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu12"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/fiqih_wudhu13"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fiqih_wudhu14"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <!--Hal-hal yang membatalkan Wudhu-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- Hal-hal yang membatalkan Wudhu"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="bold"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu15"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/fiqih_wudhu16"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fiqih_wudhu17"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <!--Larangan bagi yang tidak mempunyai wudhu-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- Larangan bagi yang tidak mempunyai wudhu"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/fiqih_wudhu18"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>





            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>