<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".arti_akhlak"
    android:background="#3d0606"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/frameHeader"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="330dp"
                android:layout_height="200dp"
                android:layout_gravity="end"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_arti_akhlak"
                app:riv_corner_radius_bottom_left="40dp"
                app:riv_corner_radius_bottom_right="40dp"
                app:riv_corner_radius_top_left="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="#3d0606"
                android:backgroundTint="#113805"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/baloo"
                    android:text="Pengertian Akhlak"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:text="Apa Itu Akhlak?"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frameHeader"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:text="@string/akhlak11"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/akhlak12"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/akhlak13"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/akhlak14"
                        android:textColor="#b0d92b"
                        android:textSize="20sp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/akhlak15"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="#d9d62b"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/akhlak16"
                    android:textSize="20dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>